--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
   "repository": "https://github.com/milesj/babel-plugin-typescript-to-proptypes",
   "license": "MIT",
   "main": "./lib/index.js",
-  "keywords": [
-    "babel-plugin",
-    "typescript",
-    "interfaces",
-    "prop-types"
-  ],
+  "keywords": ["babel-plugin", "typescript", "interfaces", "prop-types"],
   "scripts": {
     "build": "beemo typescript",
     "coverage": "yarn run jest --coverage",
@@ -49,21 +44,13 @@
   },
   "beemo": {
     "module": "@milesj/build-tools",
-    "drivers": [
-      "babel",
-      "eslint",
-      "jest",
-      "prettier",
-      "typescript"
-    ],
+    "drivers": ["babel", "eslint", "jest", "prettier", "typescript"],
     "settings": {
       "node": true
     },
     "babel": {
       "sourceType": "module",
-      "ignore": [
-        "tests/fixtures/**/*.js"
-      ]
+      "ignore": ["tests/fixtures/**/*.js"]
     },
     "eslint": {
       "rules": {
@@ -75,29 +62,16 @@
         "typescript/no-use-before-define": "off",
         "import/no-extraneous-dependencies": "off"
       },
-      "ignore": [
-        "tests/fixtures/"
-      ]
+      "ignore": ["tests/fixtures/"]
     },
     "jest": {
-      "testPathIgnorePatterns": [
-        "/node_modules/",
-        "/tests/fixtures/"
-      ],
+      "testPathIgnorePatterns": ["/node_modules/", "/tests/fixtures/"],
       "testEnvironment": "node",
-      "transformIgnorePatterns": [
-        "/node_modules/",
-        "/tests/fixtures/"
-      ],
-      "modulePathIgnorePatterns": [
-        "/node_modules/",
-        "/tests/fixtures/"
-      ]
+      "transformIgnorePatterns": ["/node_modules/", "/tests/fixtures/"],
+      "modulePathIgnorePatterns": ["/node_modules/", "/tests/fixtures/"]
     },
     "typescript": {
-      "exclude": [
-        "./tests/fixtures/**/*"
-      ]
+      "exclude": ["./tests/fixtures/**/*"]
     }
   }
 }
