Add prepare statement to package.json
Which will allow this package to be used directly from a git repo (eg. this fork) without requiring built files published to NPM.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "beemo prettier",
     "release": "np --yolo --no-yarn",
     "type": "beemo typescript --noEmit",
+    "prepare": "yarn build",
     "prerelease": "yarn test && yarn run build",
     "pretest": "yarn run type",
     "test": "yarn run jest",
